<resources>
    <string name="app_name">Kelapa Park Jepara</string>
    <string name="desc_splash_logo">splash_logo</string>
    <string name="logo_login">logo_login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="atau">atau</string>
    <string name="masuk_dengan_facebook">Facebook</string>
    <string name="masuk_dengan_twitter">Masuk dengan Twitter</string>
    <string name="belum_punya_akun">Belum punya akun? Daftar di sini</string>
    <string name="signup">Daftar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_repeat">Ulangi Password</string>
    <string name="username">Username</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="masuk_dengan_google">Google</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="beranda">Beranda</string>
    <string name="peta">Peta</string>
    <string name="tentang_kelapa_park">Tentang Kelapa Park</string>
    <string name="media_sosial">Media Sosial</string>
    <string name="website">Website</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tentang">Kelapa Park Jepara</string>
    <string name="navbar_open">navbar_open</string>
    <string name="navbar_close">navbar_close</string>
    <string name="logo_header">logo_header</string>
    <string name="image_slider">image_slider</string>
    <string name="atv_trabas">ATV Trabas</string>
    <string name="everyday">Everyday</string>
    <string name="loremtext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. \n\nIt was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="reservasi_sekarang">Reservasi Sekarang</string>
    <string name="rp_200_000">Rp. 200.000</string>
    <string name="_200k">200K</string>
    <string name="detal_harga_wahana">300K</string>
    <string name="_100k">100K</string>
    <string name="paket_tandem">Paket Tandem</string>
    <string name="paket_skywalk">Paket Skywalk</string>
    <string name="img_paket_item">img_paket_item</string>
    <string name="flying_fox_burma_bridge">Flying Fox + Burma Bridge</string>
    <string name="ayam_bakar">Ayam Bakar</string>
    <string name="ice_cream">Ice Cream</string>
    <string name="wahana_img">wahana_img</string>
    <string name="hari_ini_diskon_50">Hari ini diskon 50%</string>
    <string name="kelapa_park_jepara">Kelapa Park Jepara</string>
    <string name="no_telepon">No Telepon</string>
    <string name="kami_akan_mengirimkan_email_verifikasi_untuk_reset_password_anda">Kami akan mengirimkan email verifikasi untuk reset password anda</string>
    <string name="nama">Nama</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="pesan_sekarang">Pesan Sekarang</string>
    <string name="hari_tanggal">Hari/Tanggal</string>
    <string name="tanggal">Pilih</string>
    <string name="waktu">Waktu</string>
    <string name="pilih_wahana">Pilih Wahana</string>
    <string name="klik_marker">Klik marker lalu klik tombol kanan bawah untuk melihat arah menuju lokasi</string>
    <string name="youtube">YouTube</string>
    <string name="desc_promo_img">desc_promo_img</string>
    <string name="descripstion_promo">Descripstion Promo</string>
    <string name="title_promo">Title Promo</string>
    <string name="masa_berlaku">Masa Berlaku</string>
    <string name="_1_april_2018_1_mei_2018">1 April 2018 – 1 Mei 2018</string>
    <string name="tentang_kelapa">
        Kelapa Park Jepara merupakan Wana Wisata yang berlokasi di Desa Suwawal Timur Kecamatan Pakisaji Jepara yang dikembangkan oleh Perusahaan Daerah Aneka Usaha Jepara dan dibuka pada tanggal 3 Januari 2018. Dengan pemandangan gunung muria yang indah, Kelapa Park menawarkan fasilitas Restoran dan beberapa wahana yang menantang adrenalin seperti Offroad UTV Fin Komodo, Arena ATV (All Terrain Vehicle) dan Flying Fox. Selain itu, di Kelapa Park juga terdapat Gardu Pandang yang tepat untuk berselfie.
    </string>
    <string name="kontak_info">Kontak Info</string>
    <string name="_085877339666">085877339666</string>
    <string name="_081336687778">081336687778</string>
    <string name="copyright">© Copyright Perumda Aneka Usaha Jepara</string>
    <string name="keluar">Keluar</string>
    <string name="cek_email_verifikasi">Kami akan mengirimkan email verifikasi untuk memastikan email anda valid, silahkan cek email anda setelah mendaftar</string>
    <string name="profil">Profil Akun</string>
    <string name="contoh_nama_user">Contoh Nama User</string>
    <string name="reservasi">Reservasi</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="ganti_email">Ganti Email</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="riwayat_pemesanan">Riwayat Pemesanan</string>
    <string name="log_out">LOG OUT</string>
    <string name="line">line</string>
    <string name="hilmi_ardiansyah">Hilmi Ardiansyah</string>
    <string name="example_of_name">Example of Name</string>
    <string name="doyonsaja_gmail_com">doyonsaja@gmail.com</string>
    <string name="pengaturan_profil">Pengaturan Profil</string>
    <string name="pemesanan">Pemesanan</string>
    <string name="masukan_password">Masukkan password untuk menyimpan data profil</string>
    <string name="simpan">Simpan</string>
    <string name="tanggal_lahir">Tanggal lahir</string>
    <string name="pilih">Pilih</string>
    <string name="informasi_akun">Informasi Akun</string>
    <string name="ubah_email">Untuk mengubah email silahkan menuju menu ganti email</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="terjadi_kesalahan">Terjadi Kesalahan</string>
    <string name="tersedia">(Tersedia)</string>
    <string name="cerah">CERAH</string>
    <string name="_27_c">27 C</string>
    <string name="kelapa_park_saat_ini">Kelapa Park saat ini</string>
</resources>
