<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.EditProfileActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/edit_profile_loading"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/informasi_akun"/>

        <EditText
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/edit_profile_nama"
            android:text=""
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawablePadding="24dp"
            android:layout_marginTop="16dp"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_lengkap"/>

        <EditText
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/edit_profile_email"
            android:text=""
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="24dp"
            android:enabled="false"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>

        <LinearLayout
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/edit_profile_tanggal"
                android:layout_weight="1"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_lahir"/>

            <Button
                android:id="@+id/edit_profile_tanggal_btn"
                android:textColor="@color/white"
                android:background="@drawable/button_common_style_accent"
                android:layout_weight="1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/pilih"/>
        </LinearLayout>

        <ImageView
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/divider"
            android:contentDescription="@string/line" />

        <TextView
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jenis_kelamin"/>

        <RadioGroup
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:id="@+id/rd_group_kelamin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rd_button_pria"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pria" />

            <RadioButton
                android:id="@+id/rd_button_wanita"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wanita" />
        </RadioGroup>

        <EditText
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/edit_profile_telp"
            android:text=""
            android:drawableStart="@drawable/ic_local_phone_real_black_24dp"
            android:drawablePadding="24dp"
            android:layout_marginTop="16dp"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nomor_telepon"/>

        <EditText
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/edit_profile_password"
            android:text=""
            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
            android:drawablePadding="24dp"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"/>

        <TextView
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masukan_password"/>

    </LinearLayout>
</ScrollView>