<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/coconut"
    tools:context="com.perusdajepara.kelapaparkjepara.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/logo_kelapa_park2"
            android:contentDescription="@string/logo_login" />

        <EditText
            android:maxLines="1"
            android:drawableStart="@mipmap/ic_email_white_24dp"
            android:drawablePadding="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_style"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:textColorHint="@color/whiteTransparent"/>

        <EditText
            android:maxLines="1"
            android:drawableStart="@mipmap/ic_vpn_key_white_24dp"
            android:drawablePadding="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_style"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="@color/whiteTransparent"/>

        <Button
            android:background="@drawable/button_common_style"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atau"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:drawableEnd="@mipmap/line"
            android:drawableStart="@mipmap/line"
            android:drawablePadding="20dp"/>

        <Button
            android:textAllCaps="false"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:drawableStart="@mipmap/logo_fb_white"
            android:background="@drawable/button_fb_style"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masuk_dengan_facebook" />

        <Button
            android:textAllCaps="false"
            android:drawableStart="@mipmap/logi_twitter_white"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/button_twitter_style"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masuk_dengan_twitter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_punya_akun"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:drawablePadding="20dp"/>

        <!--<Button-->
            <!--android:background="@drawable/button_common_style"-->
            <!--android:textColor="@color/white"-->
            <!--android:textSize="16sp"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/signup"/>-->
    </LinearLayout>

</ScrollView>
