<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/nama_user_profile"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/black"
                    android:text="@string/contoh_nama_user"/>

                <TextView
                    android:id="@+id/user_email_profile"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/doyonsaja_gmail_com"/>


                <ImageView
                    android:layout_marginTop="16dp"
                    android:scaleType="fitXY"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/divider"
                    android:contentDescription="@string/line" />

                <TextView
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:textStyle="bold"
                    android:id="@+id/riwayat_pemesanan"
                    android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pemesanan"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:textAlignment="center"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pengaturan_profil"/>

        <android.support.v7.widget.CardView
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/setting_user_recy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>